@@ -101,8 +101,8 @@ bj_hand_show_dealer_probabilities ()
                                                         dealer->cards[0].value());
 }
 
-gchar *
-bj_hand_get_best_option_string ()
+char *
+bj_hand_get_best_option_string (char **secondary_message)
 {
         gchar *option_str = NULL;
         gint bestOption;
@@ -116,14 +116,31 @@ bj_hand_get_best_option_string ()
 
         switch (bestOption) {
         case KEY_S : option_str = g_strdup (_("The best option is to stand"));
+                if (secondary_message)
+                        *secondary_message = g_strdup (_("To stand means to stop adding cards to your hand.  "
+                                                         "Do this by clicking on the dealer's cards or by selecting the option from the Controls menu."));
                 break;
         case KEY_H : option_str = g_strdup (_("The best option is to hit"));
+                if (secondary_message)
+                        *secondary_message = g_strdup (_("To hit means to add another card to your hand.  "
+                                                         "Do this by clicking once on your cards or by selecting the option from the Controls menu."));
                 break;
         case KEY_D : option_str = g_strdup (_("The best option is to double down"));
+                if (secondary_message)
+                        *secondary_message = g_strdup (_("To double down means to double the initial wager and receive exactly one more card.  "
+                                                         "Do this by clicking once on the chips at the bottom of the window or by selecting the option from the Controls menu."));
                 break;
         case KEY_P : option_str = g_strdup (_("The best option is to split"));
+                if (secondary_message)
+                        *secondary_message = g_strdup (_("To split means to divide your current hand into two separate hands.  Do this by dragging one of your cards and dropping it off to the side or by selecting the option from the Controls menu."));
                 break;
         case KEY_R : option_str = g_strdup (_("The best option is to surrender"));
+                if (secondary_message)
+                        *secondary_message = g_strdup (_("To surrender means to give up half your wager and not complete the hand.  "
+                                                         "Do this by selecting the option from the Controls menu."));
+                break;
+        default:
+                break;
         }
 
         return option_str;
